# rs-kube

./: README.md
server/: .gitignore  Cargo.toml  DockerfileServer  DockerfileWorker  build.rs  docker-compose.override.yml  docker-compose.yml
server/proto/: messenger.proto
server/src/: lib.rs  server.rs  utils.rs  worker.rs
server/src/server/: hello_worlder.rs
server/src/utils/: db_connection_manager.rs  rabbit_channel_manager.rs  status_checker.rs
