[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.9.2"

[dependencies]
amqprs = "1.5.2"
anyhow = "1.0.77"
diesel = { version = "2.1.3", features = ['postgres', 'chrono', 'r2d2'] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
tokio = { version = "1.32.0", features = ["full"] }
async-trait = { version = "0.1.75", features = [] }
tonic = { version = "0.10.2", features = ["codegen"] }
tonic-health = "0.10.2"
prost = "0.12.1"


[[bin]]
name = "server"

[[bin]]
name = "worker"
